Implementação de CRUD de estudantes

--- a/BlazorServer/Properties/launchSettings.json
+++ b/BlazorServer/Properties/launchSettings.json
@@ -14,7 +14,8 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5273",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "BaseURl": "http://localhost:5273"
       }
     },
     "https": {
