--- a/BlazorServer/appsettings.json
+++ b/BlazorServer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SchoolDatabase": "Data Source=localhost;Initial Catalog=School;Integrated Security=true; Trust Server Certificate=True"
+  },
   "AllowedHosts": "*"
 }
